# holomush

./: .codecov.yml  .coderabbit.yaml  .cr-bodies.json  .custom-gcl.yml  .envrc  .gitignore  .golangci.yaml  .goreleaser.yaml  .licenserc.yaml  .markdownlint-cli2.yaml  .markdownlint.yaml  .mcp.json  .mockery-boilerplate.txt  .mockery.yaml  .rumdl.toml  .yamlfmt  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yaml  buf.gen.docs.yaml  buf.gen.internal.yaml  buf.gen.yaml  buf.yaml  cliff.toml  codecov.yml  cog.toml  compose.cluster.yaml  compose.e2e.cover.yaml  compose.e2e.yaml  compose.prod.yaml  compose.yaml  docker-compose.yaml  dprint.json  go.mod  (+10 more)
scripts/: README.md  adr-doctor.sh  adr-migrate.py  bootstrap-migrations.sql  bootstrap-seed-secrets.sh  bootstrap_seed_secrets.py  build-plugins.sh  check-bead-jxo8-5.sh  check-benchmark-regression.sh  check-docs-ia.sh  check-docs-parity.sh  check-docs-quality.sh  check-invariant-registry-consistency.sh  cloud-init.sh  docs-paths-regex.sh  e2e-summary.sh  gen-event-docs.sh  git-main-repo.sh  jj-main-repo.sh  lint-docs-paths-sync.sh  proto-ratchet-audit.sh  pyproject.toml  quarantine-audit.sh  release-notes-collect.sh  release-notes-publish.sh  sandbox.env.example  validate-plugin.sh
scripts/bootstrap-sandbox/: README.md  firewall-attach.sh  firewall.sh  spaces-bucket.sh  spaces-key.sh
scripts/migration/: add-frontmatter.mjs  admonitions.mjs  links.mjs  sp2-move.mjs  sp2-rewrite-links.mjs
scripts/smoke/: cluster-smoke.bats  cluster-smoke.sh
(+4378 files in other folders)
